<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DonationTracker</string>
    <string name="title_activity_login" tools:keep="@string/title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email" tools:keep="@string/prompt_email">Email</string>
    <string name="prompt_password" tools:keep="@string/prompt_password">Password (optional)</string>
    <string name="action_sign_in" tools:keep="@string/action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short" tools:keep="@string/action_sign_in_short">Sign in</string>
    <string name="error_invalid_email" tools:keep="@string/error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password" tools:keep="@string/error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password" tools:keep="@string/error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required" tools:keep="@string/error_field_required">This field is required</string>
    <string name="permission_rationale" tools:keep="@string/permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration">Register New User</string>
    <string name="title_activity_maps">Map</string>
    <string name="short_description">Short Description</string>
    <string name="full_description">Full Description</string>
    <string name="value">Value</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="type">type</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="name">Name</string>
    <string name="here_is_the_app">Here is the App!</string>
    <string name="logout">LogOut</string>
    <string name="view_the_locations">View the Locations</string>
    <string name="map">Map</string>
    <string name="username_or_email">Username or Email</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="add_donation_item">Add Donation Item</string>
    <string name="short_description_of_item">Short Description of Item</string>
    <string name="full_description_of_item">Full Description of Item</string>
    <string name="value_in_dollars">Value (in dollars)</string>
    <string name="add">Add</string>
    <string name="find_an_item">Find an Item</string>
    <string name="name_of_item">Name of Item</string>
    <string name="inventory">Inventory</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="number_of_incorrect_attempts">Number of incorrect attempts:</string>
    <string name="welcome_to_the_donation_tracker">Welcome to the Donation Tracker</string>

</resources>
